[gd_scene load_steps=29 format=3 uid="uid://bp60oebuy8ofr"]

[ext_resource type="Script" uid="uid://bqds6wo0ddpy5" path="res://assets/pause_screen/pause_screen.gd" id="1_vk6rb"]
[ext_resource type="FontFile" uid="uid://bhnk3wqndu8dp" path="res://Game/fonts/TrajanPro-Bold.otf" id="2_28264"]
[ext_resource type="Texture2D" uid="uid://bseh2q8ihqa6l" path="res://assets/start_screen/images/pointer.webp" id="4_3a5xr"]
[ext_resource type="AudioStream" uid="uid://c1v5s111l8u8a" path="res://assets/start_screen/audio/Title.wav" id="5_1p2ls"]
[ext_resource type="AudioStream" uid="uid://bks12ambgv4vd" path="res://assets/start_screen/audio/ui button cancel.wav" id="6_3uuhd"]
[ext_resource type="AudioStream" uid="uid://bm7u8tlxgjvtm" path="res://assets/start_screen/audio/ui button confirm.wav" id="7_meutu"]
[ext_resource type="AudioStream" uid="uid://b2qsv3xslbfqc" path="res://assets/start_screen/audio/ui change selection.wav" id="8_q5osy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vk6rb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_doa2q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wxptr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3a5xr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1p2ls"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3uuhd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_meutu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q5osy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_07r14"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o8x2c"]
atlas = ExtResource("4_3a5xr")
region = Rect2(0, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgy4w"]
atlas = ExtResource("4_3a5xr")
region = Rect2(99, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwwpc"]
atlas = ExtResource("4_3a5xr")
region = Rect2(198, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4mux"]
atlas = ExtResource("4_3a5xr")
region = Rect2(297, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfb0p"]
atlas = ExtResource("4_3a5xr")
region = Rect2(396, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_24ba0"]
atlas = ExtResource("4_3a5xr")
region = Rect2(0, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1pk8"]
atlas = ExtResource("4_3a5xr")
region = Rect2(99, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3wbb"]
atlas = ExtResource("4_3a5xr")
region = Rect2(198, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_wywq0"]
atlas = ExtResource("4_3a5xr")
region = Rect2(297, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6258"]
atlas = ExtResource("4_3a5xr")
region = Rect2(396, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgtyo"]
atlas = ExtResource("4_3a5xr")
region = Rect2(0, 144, 99, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_wjpwo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8x2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgy4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwwpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4mux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfb0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24ba0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1pk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3wbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wywq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6258")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgtyo")
}],
"loop": false,
"name": &"in",
"speed": 30.0
}]

[node name="pauseScreen" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_vk6rb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3647059)

[node name="basic buttons" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -114.0
offset_right = 121.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="start" type="Button" parent="basic buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit Game")
focus_neighbor_bottom = NodePath("../Options")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wxptr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1p2ls")
text = "Start Game"

[node name="Options" type="Button" parent="basic buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../start")
focus_neighbor_bottom = NodePath("../Quit Game")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3uuhd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_meutu")
text = "Options
"

[node name="Quit Game" type="Button" parent="basic buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../start")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q5osy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_07r14")
text = "Quit Game"

[node name="quit game" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -116.0
offset_right = 158.5
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="quit_text" type="Label" parent="quit game"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 40
text = "Are You Sure?"
horizontal_alignment = 1

[node name="Quit-yes" type="Button" parent="quit game"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit-no")
focus_neighbor_bottom = NodePath("../Quit-no")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q5osy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_07r14")
text = "Yes"

[node name="Quit-no" type="Button" parent="quit game"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit-yes")
focus_neighbor_bottom = NodePath("../Quit-yes")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q5osy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_07r14")
text = "No"

[node name="settings" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -162.0
offset_right = 221.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="rumble" type="Button" parent="settings"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
focus_neighbor_bottom = NodePath("../screen_shake")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wxptr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1p2ls")
text = "Rumble: Normal"

[node name="screen_shake" type="Button" parent="settings"]
layout_mode = 2
focus_neighbor_top = NodePath("../rumble")
focus_neighbor_bottom = NodePath("../volume")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3uuhd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_meutu")
text = "Screen Shake: Normal
"

[node name="volume" type="Button" parent="settings"]
layout_mode = 2
focus_neighbor_top = NodePath("../screen_shake")
focus_neighbor_bottom = NodePath("../exit")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3uuhd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_meutu")
text = "volume: Normal
"

[node name="exit" type="Button" parent="settings"]
layout_mode = 2
focus_neighbor_top = NodePath("../screen_shake")
focus_neighbor_bottom = NodePath("../rumble")
theme_override_fonts/font = ExtResource("2_28264")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_vk6rb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doa2q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q5osy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3a5xr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_07r14")
text = "back"

[node name="left_arrow" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_wjpwo")
animation = &"in"

[node name="right_arrow" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_wjpwo")
animation = &"in"
flip_h = true

[node name="audio" type="Node" parent="."]

[node name="Title" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("5_1p2ls")

[node name="UiButtonCancel" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("6_3uuhd")

[node name="UiButtonConfirm" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("7_meutu")

[node name="UiChangeSelection" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("8_q5osy")

[connection signal="pressed" from="basic buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="basic buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="basic buttons/Quit Game" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="quit game/Quit-yes" to="." method="_on_quityes_pressed"]
[connection signal="pressed" from="quit game/Quit-no" to="." method="_on_quitno_pressed"]
[connection signal="pressed" from="settings/rumble" to="." method="_on_rumble_pressed"]
[connection signal="pressed" from="settings/screen_shake" to="." method="_on_screen_shake_pressed"]
[connection signal="pressed" from="settings/volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="settings/exit" to="." method="_on_exit_pressed"]
